<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Edu-Area</string>
    <string name="app_name_student">Edu-Area Student</string>
    <string name="server_address">193.146.210.92:3000</string>
    <string name="title_section1">Portada</string>
    <string name="title_section2">Contexto técnico</string>
    <string name="title_section3">Contexto educativo</string>
    <string name="title_section4">Programa</string>
    <string name="reflections">Reflexiones</string>
    <string name="evidences">Evidencias</string>

    <!-- Menu Strings -->
    <string name="action_settings">Ajustes</string>
    <string name="action_view_mode">Modo Vista</string>
    <string name="action_edition_mode">Modo Edición</string>
    <string name="action_documentation_mode">Modo Documentación</string>
    <string name="action_all_experiences">Todos los cursos</string>
    <string name="action_my_experiences">Mis cursos</string>
    <string name="action_being_prepared">En preparación</string>
    <string name="action_in_progress">En proceso</string>
    <string name="action_finished">Finalizados</string>
    <string name="sincronizar">Iniciar incronización</string>
    <string name="descargando">Descargando</string>

    <!-- Sign in Activity Strings -->
    <string name="title_activity_login">Inicia sesión</string>
    <string name="action_sign_in"><b>Entrar</b></string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_forgot_password">Recuperar contraseña</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_progress_signing_in">Iniciando sesión…</string>
    <string name="error_invalid_email">Email no es válido</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Usuario o contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="remember">Recuérdame</string>

    <!-- Activity Experiences Strings -->
    <string name="title_activity_experiences">Cursos</string>
    <string name="experience">Curso</string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="loading_experiences">Cargando Cursos…</string>
    <string name="preparing_data">Preparando datos…</string>
    <string name="waiting_server_response">Esperando respuesta del servidor…</string>
    <string name="starting">Iniciando…</string>
    <string name="comment">Comentar</string>
    <string name="comment_">Comentario</string>
    <string name="copy">Copiar</string>
    <string name="remove">Eliminar</string>
    <string name="title_activity_activity_records">ActivityRecordsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity">Actividad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_here">Escribe aquí…</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="new_reflection">Nueva Reflexión</string>
    <string name="add_image">Añadir Imagen</string>
    <string name="gallery">Galería</string>
    <string name="camera">Cámara</string>
    <string name="reflection_saved">La evidencia se ha guardado correctamente.</string>
    <string name="reflection_no_saved">La evidencia no ha podido guardarse.</string>
    <string name="evidence_saved">Evidencia guardada correctamente.</string>
    <string name="evidence_no_saved">La evidencia no ha podido guardarse.</string>
    <string name="not_crop">Tu dispositivo no soporta la acción de recortar imagen.</string>
    <string name="reflexions">Reflexiones</string>
    <string name="add_video">Añadir vídeo</string>
    <string name="image">Imagen</string>
    <string name="video">Vídeo</string>
    <string name="document">Documento</string>
    <string name="error">Error</string>
    <string name="file_explorer_not_found">No se ha encontrado ningún explorador de archivos.</string>
    <string name="action_refresh">Actualizar</string>
    <string name="edit">Editar</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="last_page">Estás en la última página.</string>
    <string name="first_page">Estás en la primera página.</string>
    <string name="all">Todo</string>
    <string name="action_logout">Salir</string>
    <string name="experience_saved">Curso guardado correctamente</string>
    <string name="experience_not_saved">No se han podido guardar los cambios</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="loading_comments">Cargando comentarios...</string>
    <string name="comment_saved">Comentario guardado correctamente.</string>
    <string name="comment_no_saved">No se ha podido guardar el comentario.</string>
    <string name="comments">Comentarios</string>
    <string name="activity_start">Inicio</string>
    <string name="activity_end">Final</string>
    <string name="finished">Finalizada</string>
    <string name="in_progress">En progreso</string>
    <string name="not_started">Sin empezar</string>
    <string name="change_state">Cambiar estado</string>
    <string name="activity_state_changed">Cambiado estado de la actividad</string>
    <string name="activity_state_not_changed">No se pudo cambiar el estado</string>
    <string name="write_description">Escribe la descripción:</string>
    <string name="could_not_open_camera">No se pudo abrir la aplicación de cámara.</string>
    <string name="could_not_open_file">No se pudo abrir el archivo</string>
    <string name="reflection">Reflexión</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="records">Registro de observaciones</string>
    <string name="positive_comment">Comentario Positivo</string>
    <string name="negative_comment">Comentario Negativo</string>
    <string name="idea">Idea</string>
    <string name="snippet">Código incrustado</string>
    <string name="free_text">Texto Libre</string>
    <string name="idioma">Selecionar idioma</string>
    <string name="hintSnippet">Escriba aquí el código</string>
    <string name="modoLocal">Sin conexión a Internet. Modo local.</string>
    <string name="detalles">Detalles</string>
    <string name="observaciones">Observaciones</string>
    <string name="title_activity_activity_view">ActivityViewActivity</string>
    <string name="recursos">Recursos</string>
    <string name="entregas">Entregas</string>
    <string name="entregasRealizadas">Entregas Realizadas</string>
    <string name="title_activity_recurso_view_avtivity">RecursoViewAvtivity</string>
    <string name="title_activity_entrega_view">EntregaViewActivity</string>
    <string name="registro">Si aún no estás registrado en Edu-AREA hazlo en\nhttp://www.edu-area.com</string>
    <string name="entrega">Entrega</string>
    <string name="title_activity_experience_view_drawer">ExperienceViewDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_activity_view_drawer">ActivityViewDrawerActivity</string>
    <string name="volver">Volver</string>
    <string name="forzarSincronizacion">Cancelar sincronización</string>
    <string name="sinElementos">No hay elementos a mostrar</string>
    <string name="sugerencia">Enviar sugerencia</string>
    <string name="aviso">Aviso</string>
    <string name="avisoForzarSinc">¿Desea cancelar la sincronización de los datos pendientes? \n Se perderán los datos locales que no hayan sido enviados al servidor.</string>
    <string name="aceptar">Aceptar</string>
    <string name="asuntoSugerencia">Sugerencia Edu-AREA</string>
    <string name="textoSugerencia">Describe aquí tu problema/sugerencia...</string>
    <string name="seleccionaIdioma">Selecciona el idioma de los cursos</string>
    <string name="noHayCursos">NO HAY CURSOS A MOSTRAR EN ESTE IDIOMA</string>
    <string name="forzandoSinc">Cancelando sincronización</string>
    <string name="hayCambios">Hay cambios sin guardar</string>
    <string name="descartar">Descartar</string>
    <string name="guardandoActividad">Guardando actividad...</string>
    <string name="guardandoCurso">Guardando curso...</string>
    <string name="title_activity_entrega_view_activity_new">EntregaViewActivityNew</string>
    <string name="add_experience">Añadir curso</string>
    <string name="enviar">Enviar</string>
    <string name="introduce_codigo">Introduce el código del curso</string>
    <string name="enviando_codigo">Enviando código...</string>
    <string name="codigo_no_valido">No se ha podido agregar el curso con ese código</string>
    <string name="codigo_a_compartir">Código para alumnos</string>
    <string name="obteniendo_codigo">Obteniendo código</string>
    <string name="cerrar">Cerrar</string>
    <string name="codigo_no_disponible">Código no disponible</string>
    <string name="no_disponible_sin_conexion">Esta opción no está disponible sin conexión a Internet</string>
    <string name="cursoTitulo">Curso:</string>
    <string name="actividadTitulo">Actividad:</string>
    <string name="entregaTitulo">Entrega:</string>
    <string name="abrir">Abrir</string>
    <string name="noHayApp">Selecciona una aplicación para abrir el archivo.\nSi no hay ninguna, puedes descargarla del Play Store</string>
    <string name="descargandoArchivo">Se está descargando el archivo al directorio de Descargas</string>
    <string name="volverMP">Pantalla principal</string>
    <string name="descarga_a_local">Disponible sin conexión</string>
    <string name="descargar">Descargar</string>
    <string name="avisoDescargarCurso">¿Descargar todo el contenido del curso para que esté disponible sin conexión?</string>
    <string name="descProfe">Descipción para el profesor:</string>
    <string name="descAlumno">Descipción para el alumno:</string>
    <string name="descargar_y_actualizar">Descargar y mantener siempre actualizado</string>
    <string name="descargar_solo_ahora">Descargar sin mantener actualizado</string>
    <string name="no_actualizar">No mantener actualizado</string>
    <string name="listaActividades">Programa completo</string>
    <string name="estructuraCurso">Estructura del curso</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="mapa">Mapa</string>
    <string name="mapaNormal">Normal</string>
    <string name="mapaTerreno">Terreno</string>
    <string name="mapaSatelite">Satélite</string>
    <string name="mapaIbrido">Íbrido</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="sitios">Sitios</string>
	<string name="acercaDe">Acerca de</string>
	<string name="hintDefinition">Tipo: actividad,seminario,taller...</string>
	<string name="por"> por </string>
</resources>
