<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="area.experiencias.tfg.CommentActivity" >

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/refresh"/>
    
    <item android:id="@+id/synchronize"
        android:orderInCategory="140"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/notification"/>
    
    <item android:id="@+id/downloading"
        android:title="@string/sincronizar"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/cloud_download"/>
    
    <item android:id="@+id/forzar_sinc"
        android:title="@string/forzarSincronizacion"
        android:orderInCategory="100"
        app:showAsAction="never" />
    
    
    <item android:id="@+id/sugerencia"
        android:title="@string/sugerencia"
        android:orderInCategory="100"
        app:showAsAction="never" />
     
     <item android:id="@+id/acercaDe"
        android:title="@string/acercaDe"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/exit"/>
     
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/exit"/>
    
</menu>
