<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <item android:id="@+id/synchronize"
        android:title="@string/edit"
        android:orderInCategory="140"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/notification"/>
    
    <item android:id="@+id/downloading"
        android:title="@string/sincronizar"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/cloud_download"/>
    
    <item android:id="@+id/action_view_mode"
        android:title="@string/action_view_mode"
        android:orderInCategory="100"
         android:visible="false"
        android:showAsAction="never"/>
    
    <item android:id="@+id/action_edition_mode"
        android:title="@string/action_edition_mode"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/pencil" />
    
    <item android:id="@+id/action_save"
        android:title="@string/action_edition_mode"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/save" />
    
    <item android:id="@+id/action_cancel"
        android:title="@string/action_edition_mode"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/cross" />
    
    <item android:id="@+id/action_documentation_mode"
        android:title="@string/action_documentation_mode"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" 
        android:visible="false"
        android:icon="@drawable/edit"/>
    
     <item android:id="@+id/add_activity"
        android:title="@string/action_documentation_mode"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" 
        android:visible="false"
        android:icon="@drawable/plus"/>
        
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/refresh"/>
    
    <item android:id="@+id/forzar_sinc"
        android:title="@string/forzarSincronizacion"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/sugerencia"
        android:title="@string/sugerencia"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/volver"
        android:title="@string/volverMP"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/exit"/>
    
    <item android:id="@+id/noConnection"
        android:title="@string/sincronizar"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/notification"/>
    
    <item android:id="@+id/add_entrega"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" 
        android:visible="false"
        android:icon="@drawable/plus"/>
</menu>
