<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="area.experiencias.tfg.ExperienceViewDrawerActivity" >

   <!--  <item
        android:id="@+id/action_example"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_example"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings"/> -->
        
        
        
        
        <item android:id="@+id/synchronize"
        android:title="@string/edit"
        android:orderInCategory="140"
        android:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/notification"/>
    
    <item android:id="@+id/downloading"
        android:title="@string/sincronizar"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/cloud_download"/>
    
    <item android:id="@+id/action_view_mode"
        android:title="@string/action_view_mode"
        android:orderInCategory="100"
         android:visible="false"
        android:showAsAction="never"/>
    
    <item android:id="@+id/action_edition_mode"
        android:title="@string/action_edition_mode"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/pencil" />
    
    <item android:id="@+id/action_save"
        android:title="@string/action_edition_mode"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/save" />
    
    <item android:id="@+id/action_cancel"
        android:title="@string/action_edition_mode"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/cross" />
    
    <item android:id="@+id/action_documentation_mode"
        android:title="@string/action_documentation_mode"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" 
        android:visible="false"
        android:icon="@drawable/edit"/>
    
     <item android:id="@+id/add_activity"
        android:title="@string/action_documentation_mode"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" 
        android:visible="false"
        android:icon="@drawable/plus"/>
        
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/refresh"/>
    
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/exit"/>
    
    <item android:id="@+id/noConnection"
        android:title="@string/sincronizar"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/notification"/>
    
    <item android:id="@+id/add_entrega"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" 
        android:visible="false"
        android:icon="@drawable/plus"/>

</menu>
