<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="area.experiencias.tfg.ActivityRecordsActivity" >
    
    <item android:id="@+id/downloading"
        android:title="@string/descargando"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/cloud_download"/>
    
    <item android:id="@+id/synchronize"
        android:title="@string/edit"
        android:orderInCategory="140"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/notification"/>
    
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="120"
        app:showAsAction="always"
        android:icon="@drawable/refresh"/>
    
    <item android:id="@+id/action_edit"
        android:title="@string/edit"
        android:orderInCategory="140"
        app:showAsAction="ifRoom"
        android:icon="@drawable/edit"/>
    
     
</menu>
